--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.2",
+    "highcharts": "^11.4.6",
+    "highcharts-react-official": "^3.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
